IGNITE-14645 Support polymorphic configuration nodes. (#366)